[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsf-pandas-ta"
version = "1.0.4"
description = "Technical indicators with extra self-made indicators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "msliu98", email = "mingshuoliu98@163.com"},
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.5",
    "numpy>=1.22.0",
    "python-dateutil",
    "pytz",
    "six",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pandas_ta*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
